<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forestback"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/singleMulti"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/singlePlayer"
            android:text="@string/single_player"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/multiPlayer"
            android:text="@string/multiplayer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>








    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bugImage"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
       />



    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/bugFeedback"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/reportBug"
        android:text="@string/report_bug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/reportFeedback"
        android:text="@string/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>